[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/user interface/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/games/Game1.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/kenney_fish-pack/PNG/Retina/fishTile_110.png" type="Texture" id=3]
[ext_resource path="res://src/screens/PopArea.gd" type="Script" id=4]
[ext_resource path="res://src/autoload/SpawnTimer.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/user interface/UserInterface.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/user interface/backgrounds/Foreground.png" type="Texture" id=7]
[ext_resource path="res://assets/user interface/backgrounds/sea_background.png" type="Texture" id=8]
[ext_resource path="res://assets/user interface/backgrounds/MidBackground.png" type="Texture" id=9]
[ext_resource path="res://assets/user interface/backgrounds/Farground.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/kenney_fish-pack/PNG/Retina/fishTile_111.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/kenney_fish-pack/PNG/Retina/fishTile_109.png" type="Texture" id=12]
[ext_resource path="res://src/autoload/BubbleSpawnTimer.gd" type="Script" id=13]
[ext_resource path="res://assets/user interface/themes/CherryBombOne-Regular.ttf" type="DynamicFontData" id=14]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 540, 9.375 )

[sub_resource type="AudioStreamMicrophone" id=7]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 540.25, 65.875 )

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 14 )

[node name="Game1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1080, 1920 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -200.0 ]
}

[node name="UserInterfaceLayer" type="CanvasLayer" parent="."]
layer = 99

[node name="UserInterface" parent="UserInterfaceLayer" instance=ExtResource( 6 )]

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true

[node name="Foreground1" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -660.0
margin_right = 540.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 1

[node name="Foreground2" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -660.0
margin_right = 540.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 1

[node name="Foreground3" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -660.0
margin_right = 540.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="ControlPopArea" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PopArea" type="Area2D" parent="ControlPopArea"]
position = Vector2( 540, -96 )
script = ExtResource( 4 )

[node name="PopCollision" type="CollisionShape2D" parent="ControlPopArea/PopArea"]
position = Vector2( 0, 86.375 )
shape = SubResource( 10 )

[node name="BubbleSpawnTimer" parent="." instance=ExtResource( 5 )]
script = ExtResource( 13 )

[node name="MicrophoneInput" type="AudioStreamPlayer" parent="."]
stream = SubResource( 7 )
autoplay = true
bus = "Record"

[node name="MoveUpArea1" type="Area2D" parent="."]
position = Vector2( 540, 522 )
space_override = 3

[node name="MoveUpCollision" type="CollisionShape2D" parent="MoveUpArea1"]
position = Vector2( 0.75, -63.875 )
shape = SubResource( 8 )

[node name="MoveUpArea2" type="Area2D" parent="."]
position = Vector2( 540, 589 )
space_override = 3

[node name="MoveUpCollision" type="CollisionShape2D" parent="MoveUpArea2"]
position = Vector2( 0.75, 3 )
shape = SubResource( 8 )

[node name="MoveUpArea3" type="Area2D" parent="."]
position = Vector2( 540, 728 )
space_override = 3

[node name="MoveUpCollision" type="CollisionShape2D" parent="MoveUpArea3"]
position = Vector2( 0.75, 0 )
shape = SubResource( 8 )

[node name="MoveUpArea4" type="Area2D" parent="."]
position = Vector2( 540, 868 )
space_override = 3

[node name="MoveUpCollision" type="CollisionShape2D" parent="MoveUpArea4"]
position = Vector2( 0.75, -5 )
shape = SubResource( 8 )

[node name="MoveUpArea5" type="Area2D" parent="."]
position = Vector2( 540, 996 )
space_override = 3

[node name="MoveUpCollision" type="CollisionShape2D" parent="MoveUpArea5"]
position = Vector2( -0.25, 0 )
shape = SubResource( 8 )

[node name="MoveUpArea6" type="Area2D" parent="."]
position = Vector2( 539, 1131 )
space_override = 3

[node name="MoveUpCollision" type="CollisionShape2D" parent="MoveUpArea6"]
position = Vector2( 0.75, -2 )
shape = SubResource( 8 )

[node name="MoveUpArea7" type="Area2D" parent="."]
position = Vector2( 539, 1260 )
space_override = 3

[node name="MoveUpCollision" type="CollisionShape2D" parent="MoveUpArea7"]
position = Vector2( 0.75, 3 )
shape = SubResource( 8 )

[node name="MoveUpArea8" type="Area2D" parent="."]
position = Vector2( 540, 1393 )
space_override = 3

[node name="MoveUpCollision" type="CollisionShape2D" parent="MoveUpArea8"]
position = Vector2( 0.75, 2 )
shape = SubResource( 8 )

[node name="MoveUpArea9" type="Area2D" parent="."]
position = Vector2( 540, 1527 )
space_override = 3

[node name="MoveUpCollision" type="CollisionShape2D" parent="MoveUpArea9"]
position = Vector2( 0.75, 0 )
shape = SubResource( 8 )

[node name="MoveUpArea10" type="Area2D" parent="."]
position = Vector2( 540, 1656 )
space_override = 3

[node name="MoveUpCollision" type="CollisionShape2D" parent="MoveUpArea10"]
position = Vector2( 0.75, 1 )
shape = SubResource( 8 )

[node name="Countdown1" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 12 )

[node name="Countdown2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="Countdown3" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 11 )

[node name="BreatheAlert" type="Label" parent="."]
visible = false
anchor_left = 0.152778
anchor_top = 0.142969
anchor_right = 0.152778
anchor_bottom = 0.142969
margin_left = -102.5
margin_top = -36.5
margin_right = 102.5
margin_bottom = 36.5
custom_colors/font_color = Color( 0.913725, 0.0352941, 0.0352941, 1 )
custom_fonts/font = SubResource( 11 )
text = "SOFFIA!"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OkAlert" type="Label" parent="."]
visible = false
anchor_left = 0.152778
anchor_top = 0.142969
anchor_right = 0.152778
anchor_bottom = 0.142969
margin_left = -116.0
margin_top = -36.5
margin_right = 116.0
margin_bottom = 36.5
custom_colors/font_color = Color( 0.145098, 0.564706, 0.0117647, 1 )
custom_fonts/font = SubResource( 11 )
text = "OTTIMO!"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="body_entered" from="ControlPopArea/PopArea" to="ControlPopArea/PopArea" method="_on_body_entered"]
[connection signal="body_entered" from="MoveUpArea1" to="." method="_on_MoveUpArea_body_entered"]
[connection signal="body_entered" from="MoveUpArea2" to="." method="_on_MoveUpArea_body_entered"]
[connection signal="body_entered" from="MoveUpArea3" to="." method="_on_MoveUpArea_body_entered"]
[connection signal="body_entered" from="MoveUpArea4" to="." method="_on_MoveUpArea_body_entered"]
[connection signal="body_entered" from="MoveUpArea5" to="." method="_on_MoveUpArea_body_entered"]
[connection signal="body_entered" from="MoveUpArea6" to="." method="_on_MoveUpArea_body_entered"]
[connection signal="body_entered" from="MoveUpArea7" to="." method="_on_MoveUpArea_body_entered"]
[connection signal="body_entered" from="MoveUpArea8" to="." method="_on_MoveUpArea_body_entered"]
[connection signal="body_entered" from="MoveUpArea9" to="." method="_on_MoveUpArea_body_entered"]
[connection signal="body_entered" from="MoveUpArea10" to="." method="_on_MoveUpArea_body_entered"]
